<!-- 
 * Copyright (C) 2011-2022 Eiichiro Uchiumi. All Rights Reserved.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
  	<groupId>org.eiichiro.jaguar</groupId>
  	<artifactId>jaguar</artifactId>
  	<version>2.0-rc6-SNAPSHOT</version>
    <relativePath>..</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>jaguar-core</artifactId>
  <name>Jaguar Core</name>
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.1</version>
  			<configuration>
  				<source>1.8</source>
  				<target>1.8</target>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-javadoc-plugin</artifactId>
  			<version>2.9.1</version>
  			<configuration>
  				<bottom><![CDATA[Copyright © 2011-2022 <a href="mailto:eiichiro@eiichiro.org">Eiichiro Uchiumi</a>. All Rights Reserved.]]></bottom>
  				<doctitle>${project.name} ${project.version} API Specifications</doctitle>
  			</configuration>
  		</plugin>
  	</plugins>
  	<pluginManagement>
  		<plugins>
  			<!-- This plugin's configuration is used to store Eclipse m2e settings only. 
  			It has no influence on the Maven build itself. -->
  			<plugin>
  				<groupId>org.eclipse.m2e</groupId>
  				<artifactId>lifecycle-mapping</artifactId>
  				<version>1.0.0</version>
  				<configuration>
  					<lifecycleMappingMetadata>
  						<pluginExecutions>
  							<pluginExecution>
  								<pluginExecutionFilter>
  									<groupId>org.apache.maven.plugins</groupId>
  									<artifactId>maven-enforcer-plugin</artifactId>
  									<versionRange>1.0</versionRange>
  									<goals>
  										<goal>enforce</goal>
  									</goals>
  								</pluginExecutionFilter>
  								<action>
  									<ignore />
  								</action>
  							</pluginExecution>
  						</pluginExecutions>
  					</lifecycleMappingMetadata>
  				</configuration>
  			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<argLine>
					--add-opens java.base/java.lang=ALL-UNNAMED
					--add-opens java.base/java.util=ALL-UNNAMED
					--add-opens java.base/java.net=ALL-UNNAMED
					--add-opens java.base/java.nio.file=ALL-UNNAMED
					--add-opens java.base/java.util.concurrent=ALL-UNNAMED
					--add-opens java.base/java.util.stream=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
  		</plugins>
  	</pluginManagement>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-api</artifactId>
  		<version>1.6.1</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>ch.qos.logback</groupId>
  		<artifactId>logback-classic</artifactId>
  		<version>0.9.28</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>ch.qos.logback</groupId>
  		<artifactId>logback-core</artifactId>
  		<version>0.9.29</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.eiichiro.reverb</groupId>
  		<artifactId>reverb</artifactId>
  		<version>1.2.1</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.google.guava</groupId>
  		<artifactId>guava</artifactId>
  		<version>r09</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.javassist</groupId>
  		<artifactId>javassist</artifactId>
  		<version>3.15.0-GA</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>cglib</groupId>
  		<artifactId>cglib</artifactId>
  		<version>2.2.2</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>commons-lang</groupId>
  		<artifactId>commons-lang</artifactId>
  		<version>2.6</version>
  		<type>jar</type>
  		<scope>compile</scope>
  	</dependency>
  	<dependency>
  		<groupId>javax.servlet</groupId>
  		<artifactId>servlet-api</artifactId>
  		<version>2.5</version>
  		<type>jar</type>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.eclipse.jetty</groupId>
  		<artifactId>jetty-servlet-tester</artifactId>
  		<version>7.0.0.M2</version>
  		<type>jar</type>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.10</version>
  		<type>jar</type>
  		<scope>test</scope>
  	</dependency>
  </dependencies>
</project>